syntax = "proto3";

package myncer;

import "google/protobuf/timestamp.proto";
import "datasource.proto";

option go_package = "github.com/hansbala/myncer/server/proto;myncer_pb";

// Represents an OAuth token issued by a datasource.
message OAuthToken {
  // google/uuid generated UUID.
  string id = 1;
  string access_token = 2;
  string refresh_token = 3;
  string token_type = 4;
  string scope = 5;

  google.protobuf.Timestamp expires_at = 6;
  myncer.Datasource datasource = 7;
}
